fix visual anomalies on smaller screens

--- a/src/client/styles/styles.less
+++ b/src/client/styles/styles.less
@@ -75,7 +75,7 @@ body,
         text-align: center;
         line-height: 26px;
         .round-borders(5px);
-        .transition(0.25s);
+        .transition(0.5s);
         cursor: pointer;
 
         &.smaller {
@@ -88,7 +88,7 @@ body,
         }
 
         &.offsetted {
-            margin-left: -10% !important;
+            margin-left: -100% !important;
         }
 
         &:not(.disabled) {
@@ -539,7 +539,7 @@ body,
 
         #presentation-loading {
             position: fixed;
-            top: 100%;
+            top: 200%;
             left: 0;
             width: 100%;
             height: 100%;
